Fix Promo element spacing

--- a/src/sass/layout/_promo-element.scss
+++ b/src/sass/layout/_promo-element.scss
@@ -127,7 +127,15 @@
 
     .cta-wrapper {
       align-self: center;
-      margin-top: spacing(24);
+
+      .link {
+        margin-top: spacing(24);
+        margin-bottom: spacing(12);
+      }
+
+      .button {
+        margin-top: spacing(24);
+      }
 
       @include screen('sm') {
         align-self: flex-start;
